# iot_gw

./: .gitmodules  Cargo.toml  README.md  data_if.txt  gw.toml  thingsboard.toml
.cargo/: config  config.toml
.github/workflows/: rust.yml
arduino/DUE/min/: min.ino
arduino/DUE/min-t/: min-t.ino
arduino/UNO/min/: min.ino
arduino/UNO/min-t/: min-t.ino
arduino/min/: min.ino
arduino/min-t/: min-t.ino
data_management/: Cargo.toml
data_management/src/: lib.rs
data_template/: Cargo.toml
data_template/src/: lib.rs
hdtp/: Cargo.toml  README.md
hdtp/src/: lib.rs
sensor_interface/: Cargo.toml
sensor_interface/src/: lib.rs
src/: data_manager.rs  interface.rs  main.rs  mqtt.rs  types.rs
tools/: build_ar9331.sh  build_f133.sh  build_mt76x8.sh  build_pi.sh
