[package]
name = "gw"
version = "0.1.0"
authors = ["Dell"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
data_management = { path = "./data_management" }
sensor_interface = { path = "./sensor_interface" }
log = "0.4"
clap = "2"
log4rs = "0.10.0"
time = "0.1"
uuid = { version = "0.8", features = ["v4"] }
json = "0.12.4"
chrono = "0.4.13"
toml = "0.5.6"
serde_derive = "1.0"
serde = "1.0"
data_template = {path = "./data_template"}
serial = {version = "=0.4.0", path = "./serial-rs/serial"}
hdtp = {path = "./hdtp"}
paho-mqtt = "0.7.1"

[dependencies.rusqlite]
version = "0.23.1"
features = ["bundled"]

[dependencies.paho-mqtt-sys]
default-features = false
version = "0.5"

[features]
default = ["build_bindgen", "bundled", "ssl"]
#default = ["build_bindgen", "bundled"]
build_bindgen = ["paho-mqtt-sys/build_bindgen"]
bundled = ["paho-mqtt-sys/bundled"]
ssl = ["paho-mqtt-sys/ssl"]
