[package]
name = "gw"
version = "0.3.0"
authors = ["前尘逐梦<qianchenzhumeng@live.cn>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
data_management = { path = "./data_management" }
sensor_interface = { path = "./sensor_interface" }
log = "0.4"
clap = "2"
log4rs = "0.10.0"
time = "0.1"
uuid = { version = "0.8", features = ["v4"] }
json = "0.12.4"
chrono = "0.4.13"
toml = "0.5.6"
serde_derive = "1.0"
serde = "1.0"
data_template = {path = "./data_template"}
serial = {version = "=0.4.0", path = "./serial-rs/serial"}
paho-mqtt = "0.9.1"
shadow-rs = "0.7"
min-rs = { git = "https://github.com/qianchenzhumeng/min-rs.git"}

[dependencies.rusqlite]
version = "0.23.1"
features = ["bundled"]

[dependencies.paho-mqtt-sys]
default-features = false
version = "0.5"

[build-dependencies]
shadow-rs = "0.7"

[features]
#default = ["build_bindgen", "bundled", "ssl"]
default = ["build_bindgen", "bundled"]
build_bindgen = ["paho-mqtt-sys/build_bindgen"]
bundled = ["paho-mqtt-sys/bundled"]
ssl = ["paho-mqtt-sys/vendored-ssl"]
