[package]
name = "gw"
version = "0.3.0"
authors = ["前尘逐梦<qianchenzhumeng@live.cn>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
clap = "2"
log4rs = "0.10.0"
time = "0.1"
uuid = { version = "0.8", features = ["v4"] }
json = "0.12.4"
chrono = "0.4.13"
toml = "0.5.6"
serde_derive = "1.0"
serde = "1.0"
data_template = {path = "./data_template"}
paho-mqtt = "0.9.1"
shadow-rs = "0.7"
serialport = {version = "4.0.0", default-features=false}
min-rs = { git = "https://github.com/qianchenzhumeng/min-rs.git"}
gpio-cdev = "0.5.1"
spidev = "0.5.1"

[dependencies.rusqlite]
version = "0.23.1"
features = ["bundled"]

[dependencies.paho-mqtt-sys]
features = ["bundled", "vendored-ssl"]
version = "0.5"

[dependencies.openssl-src]
version = "111.10.1+1.1.1g"

[build-dependencies]
shadow-rs = "0.7"

[features]
default = ["build_bindgen"]
build_bindgen = ["paho-mqtt-sys/build_bindgen"]
ssl = []
