[package]
name = "sensor_interface"
version = "0.1.0"
authors = ["Yu Yu <qianchenzhumeng@live.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
min-rs = { git = "https://github.com/qianchenzhumeng/min-rs.git"}
serial = {version = "=0.4.0", path = "../serial-rs/serial"}
log = "0.4"
